name:                msgpack
version:             0.1.0
synopsis:            A MessagePack binding for Haskell
description:         A MessagePack binding for Haskell
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          user@email.address
cabal-version:	     >=1.6
build-type:          Simple

library
  build-depends:	base>=4, mtl, bytestring
  ghc-options:		-O2 -Wall
  hs-source-dirs:	src
  extra-libraries:	msgpackc

  Exposed-modules:
    Data.MessagePack
    Data.MessagePack.Base
    Data.MessagePack.Class

  C-Sources:
    dist/build/Data/MessagePack/Base_hsc.c
